--- a/css/bulma.css
+++ b/css/bulma.css
@@ -1087,6 +1087,11 @@ table th {
   padding: 3px 8px;
   position: relative;
   vertical-align: top;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   padding: 3px 10px;
   text-align: center;
   white-space: nowrap;
