Add the ability to stick the header/navbar to the top of the page. Closes #46

--- a/bulma/components/navbar.sass
+++ b/bulma/components/navbar.sass
@@ -7,6 +7,13 @@
       margin-bottom: 10px
 
 .navbar
+  &.is-fixed-top
+    position: fixed
+    left: 0
+    right: 0
+    z-index: 1030
+  &.is-fixed-top
+    top: 0
   &:not(:last-child)
     margin-bottom: 20px
   code
