--- a/bulma/layout/header.sass
+++ b/bulma/layout/header.sass
@@ -1,4 +1,10 @@
 .header
+  &.is-fixed-top
+    position: fixed
+    left: 0
+    right: 0
+    z-index: 1030
+    top: 0
   +clearfix
   background: white
   box-shadow: 0 1px 2px rgba(black, 0.1)
@@ -145,4 +151,3 @@
     &:hover,
     &.is-active
       border-bottom-width: 2px
-
