--- a/css/bulma.css
+++ b/css/bulma.css
@@ -3067,6 +3067,17 @@ table th {
   }
 }
 
+.navbar.is-fixed-top {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 1030;
+}
+
+.navbar.is-fixed-top {
+  top: 0;
+}
+
 .navbar:not(:last-child) {
   margin-bottom: 20px;
 }
@@ -3809,6 +3820,14 @@ a.menu-block:hover {
   position: relative;
   text-align: center;
   z-index: 2;
+}
+
+.header.is-fixed-top {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 1030;
+  top: 0;
 }
 
 .header:after {
