Update border radius on tabs when only one tab present

--- a/bulma/components/tabs.sass
+++ b/bulma/components/tabs.sass
@@ -79,9 +79,11 @@
       & + li
         margin-left: -1px
       &:first-child a
-        border-radius: $radius 0 0 $radius
+        border-top-left-radius: $radius
+        border-bottom-left-radius: $radius
       &:last-child a
-        border-radius: 0 $radius $radius 0
+        border-top-right-radius: $radius
+        border-bottom-right-radius: $radius
       &.is-active
         a
           background: $primary
