Add content sizes, Fix columns margin, Update code color, Fix titles margin

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -220,7 +220,7 @@ a:hover {
 
 code {
   background: #f5f7fa;
-  color: #42afe3;
+  color: #ed6c63;
   font-size: 12px;
   font-weight: normal;
   padding: 1px 2px 2px;
@@ -298,6 +298,22 @@ table th {
   font-size: 21px;
   text-align: center;
   vertical-align: top;
+}
+
+.content.is-medium {
+  font-size: 18px;
+}
+
+.content.is-medium code {
+  font-size: 14px;
+}
+
+.content.is-large {
+  font-size: 24px;
+}
+
+.content.is-large code {
+  font-size: 18px;
 }
 
 .content:not(:last-child) {
@@ -1657,6 +1673,10 @@ table th {
   line-height: 1.125;
 }
 
+.subtitle + .title {
+  margin-top: -20px;
+}
+
 .subtitle strong {
   color: #222324;
   font-weight: 400;
@@ -2465,10 +2485,17 @@ table th {
 }
 
 .columns {
-  margin-bottom: 10px;
   margin-left: -10px;
   margin-right: -10px;
   margin-top: -10px;
+}
+
+.columns:last-child {
+  margin-bottom: -10px;
+}
+
+.columns:not(:last-child) {
+  margin-bottom: 10px;
 }
 
 .columns.is-mobile {
