replace tab's margin with padding

--- a/bulma/components/tabs.sass
+++ b/bulma/components/tabs.sass
@@ -15,7 +15,7 @@
     color: $text
     display: block
     margin-bottom: -1px
-    padding: 5px 0
+    padding: 5px 10px
     vertical-align: top
     &:hover
       border-bottom-color: $text-strong
@@ -23,8 +23,6 @@
   li
     display: block
     vertical-align: top
-    & + li
-      margin-left: 20px
     &.is-active
       a
         border-bottom-color: $link
