--- a/css/bulma.css
+++ b/css/bulma.css
@@ -2830,7 +2830,7 @@ table th {
   color: #69707a;
   display: block;
   margin-bottom: -1px;
-  padding: 5px 0;
+  padding: 5px 10px;
   vertical-align: top;
 }
 
@@ -2842,10 +2842,6 @@ table th {
 .tabs li {
   display: block;
   vertical-align: top;
-}
-
-.tabs li + li {
-  margin-left: 20px;
 }
 
 .tabs li.is-active a {
