--- a/css/bulma.css
+++ b/css/bulma.css
@@ -3478,11 +3478,13 @@ table th {
 }
 
 .tabs.is-toggle li:first-child a {
-  border-radius: 3px 0 0 3px;
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px;
 }
 
 .tabs.is-toggle li:last-child a {
-  border-radius: 0 3px 3px 0;
+  border-bottom-right-radius: 3px;
+  border-top-right-radius: 3px;
 }
 
 .tabs.is-toggle li.is-active a {
