adding is-text-bold

--- a/bulma/base/helpers.sass
+++ b/bulma/base/helpers.sass
@@ -41,6 +41,9 @@
 .is-text-right
   text-align: right
 
+.is-text-bold
+  font-weight: bold
+
 // Visibility
 
 .is-hidden-mobile
@@ -69,4 +72,3 @@
 
 .is-unselectable
   +unselectable
-
