extracted white backgrounds into a variable in variables.sass to allow users to have more flexibility in their color scheme

--- a/bulma/components/tabs.sass
+++ b/bulma/components/tabs.sass
@@ -56,7 +56,7 @@
         margin-left: 5px
       &.is-active
         a
-          background: white
+          background: $white
           border-color: $border
           border-bottom-color: transparent
     &.is-centered
