--- a/bulma/config/variables.sass
+++ b/bulma/config/variables.sass
@@ -5,6 +5,7 @@ $grey-dark: #69707a
 $grey: #aeb1b5
 $grey-light: #d3d6db
 $grey-lighter: #f5f7fa
+$white: #ffffff
 
 $blue: #42afe3
 $green: #97cd76
