--- a/bulma/elements/elements.sass
+++ b/bulma/elements/elements.sass
@@ -8,7 +8,7 @@
 @import "notifications"
 
 .box
-  background: white
+  background: $white
   border-radius: 5px
   box-shadow: 0 2px 3px rgba(black, 0.1), 0 0 0 1px rgba(black, 0.1)
   padding: 20px
