--- a/bulma/layout/hero.sass
+++ b/bulma/layout/hero.sass
@@ -32,7 +32,7 @@
       margin-right: 20px
 
 .hero
-  background: white
+  background: $white
   text-align: center
   .header
     background: none
