--- a/bulma/layout/section.sass
+++ b/bulma/layout/section.sass
@@ -1,5 +1,5 @@
 .section
-  background: white
+  background: $white
   padding: 40px 20px
   & + .section
     border-top: 1px solid rgba($border, 0.5)
