--- a/bulma/components/card.sass
+++ b/bulma/components/card.sass
@@ -28,7 +28,7 @@
   padding: 10px
 
 .card
-  background: white
+  background: $white
   box-shadow: 0 2px 3px rgba(black, 0.1), 0 0 0 1px rgba(black, 0.1)
   max-width: 100%
   position: relative
