--- a/bulma/layout/header.sass
+++ b/bulma/layout/header.sass
@@ -1,6 +1,6 @@
 .header
   +clearfix
-  background: white
+  background: $white
   box-shadow: 0 1px 2px rgba(black, 0.1)
   display: flex
   height: 50px
@@ -101,7 +101,7 @@
 
 .header-menu
   +mobile
-    background: white
+    background: $white
     box-shadow: 0 4px 7px rgba(black, 0.1)
     display: none
     min-width: 120px
