--- a/bulma/elements/controls.sass
+++ b/bulma/elements/controls.sass
@@ -23,7 +23,7 @@
     &:hover
       background: $background
       border-color: $control-border
-      cursor: not-allowed;
+      cursor: not-allowed
       +placeholder
         color: rgba($control, 0.3)
 
