Fix outlines on close buttons for modals, notifications and tags

--- a/bulma/elements/elements.sass
+++ b/bulma/elements/elements.sass
@@ -24,6 +24,7 @@
   cursor: pointer
   display: inline-block
   height: 24px
+  outline: none
   position: relative
   vertical-align: top
   width: 24px
