--- a/bulma/elements/notifications.sass
+++ b/bulma/elements/notifications.sass
@@ -18,6 +18,7 @@
     border-radius: 0 $radius
     float: right
     margin: -16px -20px 0 20px
+    outline: none
     &:hover
       background: rgba(black, 0.5)
 
