--- a/css/bulma.css
+++ b/css/bulma.css
@@ -2164,6 +2164,7 @@ table th {
   border-radius: 0 3px;
   float: right;
   margin: -16px -20px 0 20px;
+  outline: none;
 }
 
 .notification .delete:hover, .notification .modal-close:hover {
@@ -2191,6 +2192,7 @@ table th {
   cursor: pointer;
   display: inline-block;
   height: 24px;
+  outline: none;
   position: relative;
   vertical-align: top;
   width: 24px;
