Fix border-radius for grouped last-child select

--- a/bulma/elements/controls.sass
+++ b/bulma/elements/controls.sass
@@ -238,5 +238,7 @@
           border-radius: $radius 0 0 $radius
       &:last-child
         border-radius: 0 $radius $radius 0
+        select
+          border-radius: 0 $radius $radius 0
     &.is-centered
       justify-content: center
