Use calc instead of negative margins for centering
Signed-off-by: Deyan Yanakiev <kliomba@abv.bg>

--- a/bulma/utilities/mixins.sass
+++ b/bulma/utilities/mixins.sass
@@ -17,11 +17,9 @@
     display: table
 
 =center($size)
-  left: 50%
-  margin-left: -($size / 2)
-  margin-top: -($size / 2)
+  left: calc(50% - (#{$size} / 2))
   position: absolute
-  top: 50%
+  top: calc(50% - (#{$size} / 2))
 
 =fa($size, $dimensions)
   display: inline-block
