--- a/css/bulma.css
+++ b/css/bulma.css
@@ -1706,11 +1706,9 @@ table th {
 }
 
 .button.is-loading:after {
-  left: 50%;
-  margin-left: -8px;
-  margin-top: -8px;
+  left: calc(50% - (16px / 2));
   position: absolute;
-  top: 50%;
+  top: calc(50% - (16px / 2));
   position: absolute !important;
 }
 
