Add left spaces between two buttons

--- a/bulma/elements/buttons.sass
+++ b/bulma/elements/buttons.sass
@@ -14,6 +14,8 @@
   padding: 11px 20px
 
 .button
+  &+&
+    margin-left: 10px
   +control
   +unselectable
   padding: 3px 10px
@@ -99,4 +101,3 @@
       position: absolute
       top: 100%
       width: 100%
-
