Remove negative margins on gapless columns container
Signed-off-by: Deyan Yanakiev <kliomba@abv.bg>

--- a/bulma/components/grid.sass
+++ b/bulma/components/grid.sass
@@ -110,8 +110,7 @@
   &.is-mobile
     display: flex
   &.is-gapless
-    margin-left: 0
-    margin-right: 0
+    margin: 0
     &:not(:last-child)
       margin-bottom: 20px
     & > .column
