--- a/css/bulma.css
+++ b/css/bulma.css
@@ -3130,8 +3130,7 @@ table th {
 }
 
 .columns.is-gapless {
-  margin-left: 0;
-  margin-right: 0;
+  margin: 0;
 }
 
 .columns.is-gapless:not(:last-child) {
