Added .is-active styling to .menu-block
- Set the background to $background
- Set text color to $link-active

--- a/bulma/components/menu.sass
+++ b/bulma/components/menu.sass
@@ -42,6 +42,9 @@
   display: block
   line-height: 16px
   padding: 10px
+  &.is-active
+    background: $background
+    color: $link-active
   &:not(:last-child)
     border-bottom: 1px solid $border
   .checkbox
