Fixes #139: Remove bottom  border on th when in last row
Signed-off-by: Deyan Yanakiev <kliomba@abv.bg>

--- a/bulma/components/table.sass
+++ b/bulma/components/table.sass
@@ -38,6 +38,7 @@
     &:hover
       background: rgba($background, 0.5)
       color: $text-strong
+    &:last-child th,
     &:last-child td
       border-bottom-width: 0
   thead
